# OWAlert

./: .gitignore  Dockerfile  README.md  docker.sh  pyproject.toml
owalert/: main.py
