[tool.poetry]
name = "owalert"
version = "0.1.0"
description = "Open Weather Alerter"
authors = ["Brian <reallybrianhudson@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
openweatherclass = "^0.4.1"
requests = "^2.28.1"
pydantic = "^1.10.2"
hatch = "^1.6.3"
python-pushsafer = "^1.0"

[tool.poetry.dev-dependencies]


[tool.hatch]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "owalert"
version = "0.0.1"
description = "Open Weather Alerter"
readme = "README.md"
authors = [
    { name = "Brian Hudson", email="reallybrianhudson@gmail.com" },
]

[project.urls]
"Homepage" = "https://github.com/bearhudson/OWAlert"